# soe_calendar_backend

./: .env  .gitignore  Cargo.toml  Dockerfile  deployment.yaml  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/2021-10-13-131712_create_db/: down.sql  up.sql
src/: connection.rs  cors.rs  main.rs  schema.rs
src/api/: handler.rs  mod.rs  models.rs  repository.rs  router.rs
tests/: persons.rest
