[package]
name = "soe_calendar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = { version = "1.4.0"}
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.130"
serde_json = "1.0.68"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]